Добавлены циклы while и do whlie!